@@ -69,6 +69,9 @@
      [channels.c channels.h nchan.c]                       
      undo broken channel fix and try a different one. there
      should be still some select errors...                 
+   - markus@cvs.openbsd.org 2001/05/28 23:25:24 
+     [channels.c]                               
+     cleanup, typo                              
 
 20010528
  - (tim) [conifgure.in] add setvbuf test needed for sftp-int.c
@@ -5499,4 +5502,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1243 2001/06/05 20:52:50 mouring Exp $
+$Id: ChangeLog,v 1.1244 2001/06/05 20:56:47 mouring Exp $
